# Guitar_Enchant_Tone

./: .gitignore  ESP-GT-XFORM：实时吉他音色转换与效果器克隆系统方案.docx  IMPLEMENTATION.md  README.md  WCHISPStudio.lnk  export_model.bat  requirements.txt  run_studio.bat  run_studio.ps1  xform.rpp
.cursor/: mcp.json
Backups/: xform-2026-06-06_151116.rpp-bak  xform-2026-06-06_151306.rpp-bak  xform-2026-06-06_152331.rpp-bak  xform-2026-06-06_152635.rpp-bak  xform-2026-06-06_153041.rpp-bak  xform-2026-06-06_180147.rpp-bak  xform-2026-06-06_203748.rpp-bak  xform-2026-06-06_222226.rpp-bak  xform-2026-06-06_222230.rpp-bak
MCU/tiny_nn/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
MCU/tiny_nn/components/bsp/: CMakeLists.txt
MCU/tiny_nn/components/bsp/02_device/: es8311.c  es8311.h  i2s_driver.c  i2s_driver.h  sd_card.c  sd_card.h  usb_msc.c  usb_msc.h  wm8978.c  wm8978.h
MCU/tiny_nn/components/bsp/03_framework/: drv_device.c  drv_device.h  drv_init.c
MCU/tiny_nn/components/bsp/05_component/: audio_post.c  audio_post.h  dsp_accel.c  dsp_accel.h  fs_mount.c  fs_mount.h  model_store.c  model_store.h  nn_accel.c  nn_accel.h  wav.c  wav.h
MCU/tiny_nn/components/bsp/06_app/: audio_xform.c  audio_xform.h  cli.c  cli.h  fx_chain.c  fx_chain.h  fx_modules.c  fx_modules.h  i2s_xform.c  i2s_xform.h  infer_worker.c  infer_worker.h
MCU/tiny_nn/components/bsp/07_tinynn_app/: bnn_polyphony.c  bnn_specmat.c
MCU/tiny_nn/components/bsp/07_tinynn_app/frontend/include/bnn_frontend/: bnn_frontend.h
MCU/tiny_nn/components/bsp/07_tinynn_app/frontend/src/: bnn_frontend.c  bnn_specfront.c
MCU/tiny_nn/components/bsp/07_tinynn_app/include/: bnn_polyphony.h
MCU/tiny_nn/components/bsp/07_tinynn_app/model/include/bnn_model/: bnn_masknet.h
MCU/tiny_nn/components/bsp/07_tinynn_app/model/src/: bnn_masknet.c
MCU/tiny_nn/components/bsp/07_tinynn_app/synth/include/bnn_synth/: bnn_specsynth.h  bnn_synth.h
MCU/tiny_nn/components/bsp/07_tinynn_app/synth/src/: bnn_specsynth.c  bnn_synth.c
MCU/tiny_nn/components/bsp/include/: bsp.h
MCU/tiny_nn/components/tinynn/: CMakeLists.txt  README.md
MCU/tiny_nn/components/tinynn/effect/include/bnn_fx/: bnn_fx.h
MCU/tiny_nn/components/tinynn/effect/src/: bnn_fx.c
MCU/tiny_nn/components/tinynn/frontend/include/bnn_frontend/: bnn_mask_config.h  bnn_specfront.h  bnn_xform_config.h
MCU/tiny_nn/components/tinynn/frontend/src/: bnn_specfront.c
MCU/tiny_nn/components/tinynn/graph/include/bnn_graph/: bnn_graph.h  bnn_graph_ir.h
MCU/tiny_nn/components/tinynn/graph/src/: bnn_graph.c  bnn_graph_ir.c
MCU/tiny_nn/components/tinynn/layer/include/bnn_layer/: bnn_layer.h  bnn_xform_layers.h
MCU/tiny_nn/components/tinynn/layer/src/: bnn_layer.c  layer_activation.c  layer_batchnorm.c  layer_conv1d.c  layer_conv2d.c  layer_dense.c  layer_dropout.c  layer_embedding.c  layer_film.c  layer_flatten.c  layer_pool.c  layer_residual.c  layer_softmax.c
MCU/tiny_nn/components/tinynn/model/include/bnn_model/: bnn_masknet.h  bnn_xform.h
MCU/tiny_nn/components/tinynn/model/src/: bnn_masknet.c  bnn_xform.c
MCU/tiny_nn/components/tinynn/operator/include/bnn_op/: bnn_dsp.h  bnn_dual_core.h  bnn_nn.h  bnn_op.h  bnn_specmat.h
MCU/tiny_nn/components/tinynn/operator/src/: bnn_dsp_cpu.c  bnn_dual_core.c  bnn_nn.c  bnn_op.c  bnn_op_cpu.c  bnn_polyphony.c  bnn_specmat.c
MCU/tiny_nn/components/tinynn/synth/include/bnn_synth/: bnn_bands.h  bnn_specsynth.h
MCU/tiny_nn/components/tinynn/synth/src/: bnn_bands.c  bnn_specsynth.c
MCU/tiny_nn/components/tinynn/utils/include/bnn_utils/: bnn_config.h  bnn_dataloader.h  bnn_dataset.h  bnn_log.h  bnn_loss.h  bnn_mem.h  bnn_metric.h  bnn_optimizer.h  bnn_perf.h  bnn_tensor.h  bnn_workspace.h
MCU/tiny_nn/components/tinynn/utils/src/: bnn_dataloader.c  bnn_dataset.c  bnn_log.c  bnn_loss.c  bnn_mem.c  bnn_metric.c  bnn_optimizer.c  bnn_tensor.c  bnn_workspace.c
MCU/tiny_nn/main/: CMakeLists.txt  idf_component.yml  tiny_nn.c
Media/: 100_16_84T_Other_Upright_Groove_03.mid  100_16_84T_Other_Upright_Groove_06.mid  100_8_84T_Jazz_CoolJazz_01.mid  110_16_84_Jazz_Upright_Bossa_01.mid  110_16_84_Jazz_Upright_Bossa_02.mid  110_16_84_Jazz_Upright_Bossa_03.mid  120_16_44_Jazz_Upright_01.mid  70_16_44_Pop_Rain_Arp_06.mid  70_16_44_Pop_Rain_Strum_04.mid  70_16_84_Pop_Rain_Arp_01.mid  70_16_84_Pop_Rain_Arp_02.mid  70_16_84_Pop_Rain_Arp_03.mid  80_16_84_Country_02.mid  80_16_84_Country_03.mid  80_16_84_Country_04.mid  Default.mid  Welcome to Bass Tab Player.mid  Welcome to Guitar Tab Player.mid
configs/: instruments.json  instruments.yaml  mask.json  mask_style.json  train_ddsp.yaml
dataset/: _notes_clip0001.json
dataset/_notes/: clip_0001.json  clip_0002.json  clip_0003.json  clip_0004.json
dataset/proc/: stats.npz  windows.json
dataset/proc/pairs/: pair_00000.npz  pair_00001.npz  pair_00002.npz  pair_00003.npz  pair_00004.npz  pair_00005.npz  pair_00006.npz  pair_00007.npz
dataset/proc_style/: phase_inv.npy  stats.npz  windows.json
dataset/proc_style/pairs/: pair_00001.npz  pair_00002.npz  pair_00003.npz  pair_00004.npz  pair_00005.npz  pair_00006.npz  pair_00007.npz  pair_00008.npz  pair_00009.npz  pair_00011.npz  pair_00012.npz  pair_00013.npz  pair_00014.npz  pair_00015.npz  pair_00016.npz  pair_00017.npz  pair_00018.npz  pair_00019.npz
dataset/raw_style/clip_0001/: meta.json
dataset/raw_style/clip_0002/: meta.json
dataset/raw_style/clip_0003/: meta.json
dataset/raw_style/clip_0004/: meta.json
docs/: 工程说明.md
outputs/checkpoints/: best.pt  last.pt
scripts/: _paths.py  _qa_style.py  export_bin.py  export_mask.py  export_model.py  extract_features.py  extract_labels.py  make_synthetic_data.py  prepare_manifest.py  preprocess_mask.py  render_demo.py  render_mask.py  train.py  train_mask.py
scripts/reaper/: collect_dataset.lua  collect_pairs.lua  collect_style.lua  collect_ukulele.lua  gen_clip_notes.py  ingest_render.py
src/esp_xform/: __init__.py  config.py  fx.py  infer.py
src/esp_xform/audio/: io.py  (+4 more)
tools/: compare_mcu_pc.py  normalize_dataset.py  onnx_to_bnn_ir.py  preprocess_gui.py  qa_dataset.py  xform_studio.py
(+114 files in other folders)
